--- a/client/css/client.css
+++ b/client/css/client.css
@@ -3,7 +3,7 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 */
-/* 
+/*
     Created on : Jul 15, 2017, 2:34:27 PM
     Author     : anderssn
 */
@@ -13,6 +13,10 @@ html, body {
     width: 100%;
     height: 100%;
     overflow: hidden
+}
+span.text#version {
+    float: right;
+    padding: 5px;
 }
 div#messageList {
     float: left;
@@ -38,7 +42,7 @@ div#tabHandles {
     float: left;
     background: #eeeeee;
     border-bottom: 1px solid #646464;
-    padding: 5px;
+    padding: 5px 0px;
 }
 a.button {
     display: block;
