--- a/client/res/css/master.css
+++ b/client/res/css/master.css
@@ -79,10 +79,12 @@
     padding: 5px;
     float: none;
     overflow: hidden;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-.box.invis {
+.box .box {
     background: transparent;
     border: transparent;
+    box-shadow: none;
 }
 
 .center.box {
