--- a/client/res/css/master.css
+++ b/client/res/css/master.css
@@ -2,12 +2,12 @@
   font-family: 'Material Icons';
   font-style: normal;
   font-weight: 400;
-  src: url(/dnd/res/fonts/iconfont/MaterialIcons-Regular.eot); /* For IE6-8 */
+  src: url(../fonts/iconfont/MaterialIcons-Regular.eot); /* For IE6-8 */
   src: local('Material Icons'),
     local('MaterialIcons-Regular'),
-    url(/dnd/res/fonts/iconfont/MaterialIcons-Regular.woff2) format('woff2'),
-    url(/dnd/res/fonts/iconfont/MaterialIcons-Regular.woff) format('woff'),
-    url(/dnd/res/fonts/iconfont/MaterialIcons-Regular.ttf) format('truetype');
+    url(../fonts/iconfont/MaterialIcons-Regular.woff2) format('woff2'),
+    url(../fonts/iconfont/MaterialIcons-Regular.woff) format('woff'),
+    url(../fonts/iconfont/MaterialIcons-Regular.ttf) format('truetype');
 }
 .icon {
     font-family: 'Material Icons';
