--- a/client/client/client.css
+++ b/client/client/client.css
@@ -174,6 +174,9 @@ a.button.revoke {
     margin: 0px;
     padding: 0.2rem 0.5rem;
 }
+a.button.revoked {
+    filter: grayscale(100%);
+}
 a.button:hover {
 
 }
