remove message x scroll

--- a/client/client/client.css
+++ b/client/client/client.css
@@ -238,6 +238,7 @@ div#messageList {
     /*display:flex;
     flex-direction:column;*/
     overflow-y: auto;
+    overflow-x: hidden;
 }
 
 div#contactList{
