--- a/client/client/client.css
+++ b/client/client/client.css
@@ -155,6 +155,7 @@ div#tabContent {
  background: radial-gradient(ellipse farthest-corner at right bottom, #FEDB37 0%, #e4b14a 8%, #9f7928 30%, #8A6E2F 40%, transparent 80%),
              radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #FFFFAC 8%, #D1B464 25%, #5d4a1f 62.5%, #5d4a1f 100%);
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
     display: initial; /* reset Font Awesome's display:inline-block */
  }
@@ -204,15 +205,7 @@ a.button.revoke {
 a.button.revoked {
     filter: grayscale(100%);
 }
-a.button:hover {
 
-}
-a.button.active {
-
-}
-a.button.character {
-
-}
 
 span.text#version {
     margin-right: 1rem;
