--- a/client/client/client.css
+++ b/client/client/client.css
@@ -281,6 +281,7 @@ div#messageList div.message {
     /*padding: 1rem 0.5rem;*/
     float: left;
     clear: both;
+    max-width: 90%;
 }
 div#messageList div.message.self {
     float: right;
