--- a/client/client/client.css
+++ b/client/client/client.css
@@ -475,6 +475,26 @@ div#messageList div.message.hidden {
     display: none;
 }
 
+/*
+    messages
+*/
+
+div.message div.header {
+    float: left;
+    clear: both;
+    width: 100%;
+}
+div.message div.header div.metadata {
+    float: left;
+}
+div.message div.header div.time {
+    float: right;
+}
+div.message div.body {
+    float: left;
+    clear: both;
+}
+
 
 
 @media screen and (max-width: 700px) {
