--- a/client/client/client.css
+++ b/client/client/client.css
@@ -496,6 +496,16 @@ div.message div.body {
     clear: both;
 }
 
+/*
+    dice
+*/
+
+div.tab[name=Statistics] div#dOutput {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 
 
 @media screen and (max-width: 700px) {
